force-app/main/default/objects/RentalAsset__c/RentalAsset__c.object-meta.xml
<CustomObject>
    <label>Rental Asset</label>
    <nameField>
        <label>Rental Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rental Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>