force-app/main/default/objects/RentalAsset__c/fields/AssetKey__c.field-meta.xml
<CustomField>
    <fullName>AssetKey__c</fullName>
    <description>Optional external key for imports/mapping.</description>
    <externalId>true</externalId>
    <label>Asset Key</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>