force-app/main/default/objects/RentalAsset__c/fields/AssetType__c.field-meta.xml
<CustomField>
    <fullName>AssetType__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
                <default>true</default>
                <label>Apartment</label>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>