force-app/main/default/objects/RentalAsset__c/fields/AvailabilityStatus__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityStatus__c</fullName>
    <label>Availability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacant</fullName>
                <default>true</default>
                <label>Vacant</label>
            </value>
            <value>
                <fullName>Occupied</fullName>
            </value>
            <value>
                <fullName>MaintenanceHold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>