force-app/main/default/objects/RentalAsset__c/fields/BuildingName__c.field-meta.xml
<CustomField>
    <fullName>BuildingName__c</fullName>
    <label>Building Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>