force-app/main/default/objects/RentalAsset__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <externalId>true</externalId>
    <label>Rental Asset ID</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>