force-app/main/default/objects/RentalAsset__c/fields/MarketRent__c.field-meta.xml
<CustomField>
    <fullName>MarketRent__c</fullName>
    <label>Market Rent</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>