force-app/main/default/objects/RentalAsset__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Owner</label>
    <referenceTo>Owner__c</referenceTo>
    <relationshipLabel>Rental Assets</relationshipLabel>
    <relationshipName>RentalAssets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>