force-app/main/default/objects/RentalAsset__c/fields/SizeSqm__c.field-meta.xml
<CustomField>
    <fullName>SizeSqm__c</fullName>
    <label>Size (sqm)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>