force-app/main/default/objects/RentalAsset__c/fields/TestDeployFromSandboxToAgentforceOrg__c.field-meta.xml
<CustomField>
    <fullName>TestDeployFromSandboxToAgentforceOrg__c</fullName>
    <externalId>true</externalId>
    <label>TestDeployFromSandboxToAgentforceOrg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>