force-app/main/default/objects/RentalAsset__c/fields/UnitLabel__c.field-meta.xml
<CustomField>
    <fullName>UnitLabel__c</fullName>
    <description>Apartment identifier like A-101; blank for houses.</description>
    <label>Unit Label</label>
    <length>30</length>
    <type>Text</type>
</CustomField>